# expats

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
config/: evaluate.yaml  interactively_interpret.yaml  predict.yaml  train.yaml  train_bert_classifier.yaml
config/asap_aes/: evaluate.yaml  train_bert.yaml  train_distilbert.yaml  train_rf.yaml
data/example/: annotate_input.txt  dummy_unigram.tsv
expats/: cli.py  settings.py  task.py
expats/common/: config_util.py  instantiate.py  log.py  serialization.py  tensor.py  type.py
expats/data/: asap_aes.py  cefr.py  convert.py  dataset.py  factory.py  helper.py  instance.py
expats/error/: __init__.py
expats/feature/: __init__.py  base.py  text_basics.py
expats/integration/lit/: dataset.py  model.py  server.py
expats/metric/: helper.py  metric.py
expats/ml/: sklearn.py
expats/ml/nn/: base.py  trainer.py  transformer.py
expats/nlp/: parser.py
expats/profiler/: __init__.py  base.py  doc_feature_profiler.py  transformer.py
scripts/: do_asap_experiment.sh
tests/: conftest.py
tests/common/: test_config_util.py  test_instantiate.py
tests/data/: test_convert.py
tests/e2e/: test_pipelines.py
tests/feature/: test_text_basics.py
tests/fixtures/config/: evaluate.yaml  evaluate_cefr.yaml  interpret.yaml  predict.yaml  train.yaml  train_bert_classifier.yaml  train_bert_regressor.yaml  train_cefr.yaml  train_distilbert_regressor.yaml
tests/fixtures/data/: cefr.tsv  line_by_line.txt  (+2 more)
tests/metric/: test_metric.py
tests/nlp/: test_parser.py
